--- a/src/Styles/LogStyle.css
+++ b/src/Styles/LogStyle.css
@@ -3,27 +3,42 @@
     height: 60vh;
     width: 40vw;
     margin: 5% 0% 0% 30%;
-   background-color: rgb(213, 182, 124);
+   background-color: rgb(150, 176, 234);
    box-shadow: 1px 2px 10px gray;
    border: none;
    
 }
 .data{
     padding: 2%;
-
 }
 .data input{
-    height: 5vh;
-    width: 12vw;
+    height: 6vh;
+    width: 20vw;
     border: none;
-    box-shadow: 1px 1px 7px lightgray;
+    box-shadow: 1px 1px 7px darkgray;
+    border-radius: 20px;
+    background-color: rgb(224, 221, 221);
+    border:2px solid white;
+    margin-left: 20%;
+    padding-left: 2%;
 }
 .result{
     padding: 2%;
-    margin: 5% 0 0 15%;
-    font-size: large;
+    margin: 10% 0 0 20%;
+    font-size: larger;
+    color:rgb(254, 253, 253);
     font-weight: 600;
-    border: 1px solid #ddd;
+    /* border: 0.5px solid #ddd; */
     width: 50%;
     height: 40%;
+    background-color: none;
+    box-shadow: 3px 3px 8px rgb(22, 22, 22);
+    /* border-radius: 2%; */
+    text-align: justify;
+}
+
+.image{
+    width: 15%;
+    height: 15%;
+    margin-left: 40%;
 }
