--- a/src/Styles/NavStyle.css
+++ b/src/Styles/NavStyle.css
@@ -2,12 +2,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: orangered;
+    background-color: rgb(1, 1, 94);
     color:white;
     padding: 0 1% 0 1%;
-      
+    font-size: large;
+    font-weight: 700;
+    height: 8vh;
 }
 .div2{
     color:white;
    
 }
+/* .navbar img{
+    height: 5vh;
+    width: 5vw;
+} */
